--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@webpack-cli/generators": "^2.0.0",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0"
   }
