--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@webpack-cli/generators": "^2.0.0",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0"
+  },
+  "dependencies": {
+    "eslint": "^7.25.0"
   }
 }
