--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@webpack-cli/generators": "^2.0.0",
+    "prettier": "2.2.1",
     "webpack": "^5.35.1",
     "webpack-cli": "^4.6.0"
   },
